# SQLAtlas

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  commitlint.config.js  docker-compose.yml  netlify.toml  package.json  pnpm-lock.yaml  turbo.json
apps/parsing-engine/: Dockerfile  pyproject.toml
apps/parsing-engine/src/: config.py  main.py
apps/parsing-engine/src/application/dto/: __init__.py  parse_dto.py
apps/parsing-engine/src/application/ports/: __init__.py
apps/parsing-engine/src/application/use_cases/: analyze_sql.py  batch_parse.py  parse_sql.py
apps/parsing-engine/src/domain/entities/: __init__.py  complexity.py  dependency.py  flow_node.py  parameter.py  parse_result.py  security_finding.py  table_reference.py  variable_reference.py
apps/parsing-engine/src/domain/services/: __init__.py  dependency_analyzer.py  doc_generator.py  flow_builder.py  security_scanner.py  sql_parser.py
apps/parsing-engine/src/domain/value_objects/: __init__.py  object_type.py  severity.py  sql_hash.py
apps/parsing-engine/src/infrastructure/analyzers/: __init__.py  auto_doc_generator.py  flow_builder_ansi.py  flow_builder_base.py  flow_builder_plpgsql.py  flow_builder_plsql.py  flow_builder_tsql.py  hybrid_flow_builder.py  regex_security_scanner.py  sqlglot_dependency_analyzer.py  variable_flow_analyzer.py
apps/parsing-engine/src/infrastructure/parsers/: __init__.py  sqlglot_base.py  sqlglot_plpgsql_parser.py  sqlglot_plsql_parser.py  sqlglot_tsql_parser.py
apps/parsing-engine/tests/unit/: test_parsers.py
(+246 files in other folders)
